# Causal-Memory-Layer

./: .bandit  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  DECISION_CODES.md  Dockerfile  LICENSE_COMMERCIAL.md  LOTUS.md  PRICING.md  README.md  READY_FOR_REVIEW.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.gpt56/: review-profile.json
api/: server.py  store.py
benchmarks/: README.md  RESULTS.md  __init__.py
cli/: __init__.py  audit.py  chain.py  main.py
cml/: __init__.py  audit.py  chain.py  ctag.py  record.py  report.py  reviewer_router.py  reviewer_rubric_policy.py  safety_eval.py  three_record_audit.py
docs/: CML_AI_ADOPTION_EQUILIBRIUM_LAYER.md  FINTECH_LIMIT_DEMO.md  GRANT_EVIDENCE.md  LOTUS.md  LTP_CML_BRIDGE.md  NON_CLAIMS.md  README_STAR_CONVERSION_SNIPPET.md  RELATED_CAPU_PERSONA_BOUNDARY_UPDATE.md  RELATED_LS_GRANT_PATH.md  RELEASE_NOTES_REVIEWER_READY.md  REVIEWER_PATH.md  REVIEWER_PERSONA_ROUTER.md  START_HERE.md  STAR_HOOK.md
examples/: agent_approval_lineage_audit.py  agent_intent_drift_trace.json  audit_config_example.yaml  audit_report_example.md  causal_equilibrium_point.py  crewai_action_ref_listener.py  crewai_signed_receipt_sidecar.py  crewai_style_causal_audit.py  crewai_three_record_causal_audit.py  ctag_vectors.md  cyber_patch_to_poc_audit.py  exec_causal_log.jsonl  gemini_causal_audit.py  grok_xai_causal_audit.py  multihop_qa_mismatch_explain.md  multihop_qa_mismatch_log.jsonl  openai_claude_causal_audit.py  privileged_action_missing_authorization_log.jsonl  qwen_kimi_deepseek_causal_audit.py  reviewer_persona_router.yml  secret_to_net_explain.md  secret_to_net_log.jsonl
scripts/: run_experimental_cause_band_eval.py  run_mcp_demo_payloads.py  run_safety_eval.py
tests/: test_action_ref.py  test_api_security.py  (+66 more)
(+244 files in other folders)
