[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-memory-layer"
version = "0.4.0"
description = "Causal Memory Layer — SDK for recording, auditing, and analyzing causal chains in systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "CML Project", email = "dev@causal-memory.dev" }
]
keywords = [
  "causal", "audit", "provenance", "security", "compliance",
  "ebpf", "tracing", "causal-memory", "ai-governance"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"

dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "causal-memory-layer[api]",
]

[project.scripts]
cml = "cli.main:main"

[project.urls]
Homepage     = "https://github.com/safal207/Causal-Memory-Layer"
Repository   = "https://github.com/safal207/Causal-Memory-Layer"
Issues       = "https://github.com/safal207/Causal-Memory-Layer/issues"
Changelog    = "https://github.com/safal207/Causal-Memory-Layer/blob/main/ROADMAP.md"

[tool.setuptools.packages.find]
include = ["cml*", "cli*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"
